vacation-product/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vacation-product
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
